--- a/app/piecesofmusic/webapp/view/Main.view.xml
+++ b/app/piecesofmusic/webapp/view/Main.view.xml
@@ -11,36 +11,6 @@
                         path: 'publishdate'
                     }
                 }">
-                <!--<headerToolbar>
-		        	<OverflowToolbar id="overflowToolbar1">
-		        		<content>
-		        			<Title id="title" text="Products" level="H2"/>
-		        			<ToolbarSpacer id="toolbarSpacer"/>
-		        			<ComboBox id="idPopinLayout"
-		        				placeholder="Popin layout options"
-		        				change="onPopinLayoutChanged">
-		        				<items>
-		        					<core:Item id="item1" text="Block"
-		        						key="Block"/>
-		        					<core:Item id="item2" text="Grid Large"
-		        						key="GridLarge"/>
-		        					<core:Item id="item3" text="Grid Small"
-		        						key="GridSmall"/>
-		        				</items>
-		        			</ComboBox>
-		        			<Label text="Sticky options:" />
-		        			<CheckBox text="ColumnHeaders"
-		        				select="onSelect"/>
-		        			<CheckBox text="HeaderToolbar"
-		        				select="onSelect"/>
-		        			<CheckBox text="InfoToolbar"
-		        				select="onSelect"/>
-		        			<ToggleButton id="toggleInfoToolbar"
-		        				text="Hide/Show InfoToolbar"
-		        				press="onToggleInfoToolbar" />
-		        		</content>
-		        	</OverflowToolbar>
-		        </headerToolbar>-->
 		        <infoToolbar>
 		        	<OverflowToolbar id="overflowToolbar2">
 		        		<Label id="label" text="List of available pieces of music"/>
@@ -66,22 +36,15 @@
 		        <items>
 		        	<ColumnListItem id="colListItem" vAlign="Middle">
 		        		<cells>
-		        			<!--<ObjectIdentifier id="objId"
-		        				title="{Name}"
-		        				text="{ID}"/>-->
-		        			<Text id="t1"
-		        				text="{name}" />
+		        			<ObjectIdentifier id="t1"
+		        				title="{name}"
+		        				text="{ID}"
+                                titleActive="true"
+                                titlePress="onPress"/>
 		        			<Text id="t2"
 		        				text="{publishdate}" />
-		        			<Text id="t3"
+                            <Text id="t3"
 		        				text="{composer/firstname} {composer/lastname}" />
-		        			<!--<ObjectNumber
-		        					number="{
-		        						parts:[{path:'Price'},{path:'CurrencyCode'}],
-		        						type: 'sap.ui.model.type.Currency',
-		        						formatOptions: {showMeasure: false}
-		        					}"
-		        					unit="{CurrencyCode}" />-->
 		        		</cells>
 		        	</ColumnListItem>
 		        </items>
